--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browserify": "^7.0.2",
     "express": "^4.10.6",
     "handlebars": "^2.0.0",
+    "randomstring": "^1.0.3",
     "socket.io": "^1.2.1"
   }
 }
